[gd_scene load_steps=18 format=2]

[ext_resource path="res://input/Input.gd" type="Script" id=1]
[ext_resource path="res://fonts/mononoki_regular_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://fonts/mononoki_regular_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=6]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=7]
[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.180392, 0.203922, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.231373, 0.258824, 0.321569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.203922, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.258824, 0.321569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float scan_line_count : hint_range(0, 1080) = 0.50;

vec2 uv_curve(vec2 uv) {
    uv = (uv - 0.5) * 2.0;
    
    uv.x *= 1.0 + pow(abs(uv.y) / 4.0, 3.0);
    uv.y *= 1.0 + pow(abs(uv.y) / 4.0, 3.0);
    
    uv = (uv / 2.0) + 0.5;
    return uv;
}

void fragment() {
    float PI = 3.14159;
    float r = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x * 0.0), 0.0).r;
    float g = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x * 1.0), 0.0).g;
    float b = texture(SCREEN_TEXTURE, uv_curve(SCREEN_UV) + vec2(SCREEN_PIXEL_SIZE.x * -1.0), 0.0).b;
    
    float s = sin(uv_curve(SCREEN_UV).y * scan_line_count * PI * 2.0);
    s = (s * 0.5 + 0.5) * 0.9 + 0.1;
    
    vec4 scan_line = vec4(vec3(pow(s,0.25)), 1.0);
    
    //vec4(r,g,b, 1.0);
    COLOR = vec4(r,g,b, 1.0) * scan_line; 

}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/scan_line_count = 0.5

[sub_resource type="StreamTexture" id=9]
flags = 4

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
starting_prompt = "Arresto domiciliario???
------------------
Despiertas con algo de dolor de cabeza, tras unos segundos recuperas la razon, ¿en donde estas? ¿Como llegaste aqui?
"

[node name="Player" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 6 )
help_message = "Comandos disponibles:
ayuda - muestra este mensaje
mirar - muestra mas informacion y detalles del cuarto actual
ir [dirección] - cambia tu posicion al cuarto ubicado en una dirección cardinal
tomar [objeto] - tomas un objeto el cuarto actual
soltar [objeto] - dejas un objeto en el cuarto actual, puedes volver a tomarlo despues
usar [objeto] - usas un objeto en el cuarto actual, si su uso es valido, se deshace del mismo
mochila - muestra los objetos que posees actualmente
salir - cierra la ventana y termina el juego"

[node name="RoomManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Sala" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = -1072.0
margin_right = 656.001
margin_bottom = -872.0
room_name = "una sala"
room_description = "algo pequeña con solo un par de muebles alrededor de una vieja TV, no tiene señal."
room_details = "El lugar parece abandonado. Puedes ver la puerta principal detras de ti, es enorme y pesada, no la puedes abrir, ¿podras hallar la forma de salir? ¿Como llegaste aqui en primer lugar?"

[node name="Invernadero" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 664.0
margin_top = -864.0
margin_right = 864.0
margin_bottom = -617.0
room_name = "un invernadero"
room_description = "un cuarto con paredes y techos transparentes, que permiten el paso del sol muy descuidado, la hierba ha crecido mucho y las plantas estan empezando a secarse."
room_details = "Hay una entrada a lo que parece ser una pequeña bodega, pero esta cerrada con candado"

[node name="Ropero" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 664.0
margin_top = -1496.0
margin_right = 864.0
margin_bottom = -1296.0
room_name = "un ropero"
room_description = "muy amplio, hay algo de ropa vieja y algunas cajas de zapatos vacias"
room_details = "Detras del monton de ropa hay una ventila por la que puedes ir gateando, pero esta atornillada a la pared."

[node name="SecretRoom" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 568.0
margin_top = -1704.0
margin_right = 768.0
margin_bottom = -1504.0
room_name = "un cuarto secreto!"
room_description = "otro misterio, parece un equipo de laboratorio y contenedores de diversos quimicos"
room_details = "Uno de los contenedores contiene algo curioso, una palanca"

[node name="PasilloSecreto" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 360.0
margin_top = -1704.0
margin_right = 560.0
margin_bottom = -1504.0
room_name = "un pasillo secreto!"
room_description = "muy largo y sucio, hay una gotera que ha dejado un charco creciendo gota a gota"
room_details = "El pasillo parece estar algo humedo, me pregunto a donde llevara"

[node name="Habitacion" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 248.0
margin_top = -1280.0
margin_right = 448.0
margin_bottom = -1080.0
room_name = "una habitación pequeña"
room_description = "un cuarto individual con una sola cama, hay un buró a lado"
room_details = "En el cajon del buro ves una nota amarillenta con algunos numeros escritos, lo demas son telarañas y recibos de luz vencidos."

[node name="Comedor" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 664.0
margin_top = -1072.0
margin_right = 864.0
margin_bottom = -872.0
room_name = "un comedor"
room_description = "un area amplia, la mesa es enorme, parece que muchas personas vivieron aqui"
room_details = "Hay comida servida, pero esta fria y mosqueada, los cubiertos son finos, aun no se oxidan"

[node name="Bodega" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 872.0
margin_top = -856.0
margin_right = 1072.0
margin_bottom = -656.0
room_name = "un bodega"
room_description = "un cuarto pequeño lleno de herramientas de jardin, algunas macetas y demas"
room_details = "En la caja de herramientas podria haber algunas cosas utiles"

[node name="Cocina" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 664.0
margin_top = -1287.0
margin_right = 864.0
margin_bottom = -1080.0
room_name = "una cocina"
room_description = "bastante modesta, no hay muchos trastes y los que hay estan en pedazos. Hay mas cubiertos como en el comedor"
room_details = "Podria haber algo util entre los cubiertos"

[node name="Bathroom" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 248.0
margin_top = -1072.0
margin_right = 448.0
margin_bottom = -872.0
room_name = "un baño"
room_description = "incompleto, sin regadera, solo lavabo, taza y un gabinete para productos de higiene personal"
room_details = "Poniendo mas atencion al gabinete, parece que hay algunas cosas mas.  Una llave pequeña, podria servir con un candado simple"

[node name="BigBath" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 224.0
margin_top = -1496.0
margin_right = 448.0
margin_bottom = -1288.0
room_name = "un baño completo"
room_description = "mas grande, tiene una tina gigantesca y la llave esta abierta, un patito de goma flota en el agua sucia."
room_details = "Cierras el grifo, hay algo hundido al fondo de la tina.  Parece la llave principal"

[node name="ParkingLot" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = -864.0
margin_right = 656.0
margin_bottom = -568.0
room_name = "la entrada principal"
room_description = "la entrada de esta casa, ¡al fin eres libre! Lo mejor sera huir de aqui y buscar ayuda en algun lado. 
Aunque claro, podrias regresar y perder el tiempo ahi dentro...
Ve al sur para terminar"
room_details = ""

[node name="Fin" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = -544.0
margin_right = 656.0
margin_bottom = -344.0
room_name = "el fin"
room_description = "Muchas gracias por jugar, volviendo al menu principal"
room_details = ""

[node name="Pasillo" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = -1280.0
margin_right = 656.0
margin_bottom = -1080.0
room_name = "un pasillo"
room_description = "algo angosto, hay varios cuadros colgados a lo largo del mismo. "
room_details = "El pasillo conecta las habitaciones y la sala, parece ser que la habitacion principal tiene un seguro con contraseña"

[node name="HabitacionGrande" parent="RoomManager" instance=ExtResource( 7 )]
margin_left = 456.0
margin_top = -1496.0
margin_right = 656.0
margin_bottom = -1288.0
room_name = "la habitacion principal"
room_description = "el cuarto de los dueños, a juzgar por el tamaño del lugar y la cama matrimonial"
room_details = "Al oeste esta la puerta cerrada de lo que parece ser un enorme ropero, tiene llave, pero seguro es facil forzarlo con algo puntiagudo. 
La otra entrada esta bloqueada por dentro "

[node name="PanelBackground" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelBackground"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="PanelBackground/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
custom_constants/separation = 20

[node name="GUI" type="PanelContainer" parent="PanelBackground/MarginContainer/Rows"]
margin_right = 1240.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 2 )

[node name="GUI" type="HBoxContainer" parent="PanelBackground/MarginContainer/Rows/GUI"]
margin_right = 1240.0
margin_bottom = 28.0
custom_constants/separation = 50

[node name="List of commands" type="Label" parent="PanelBackground/MarginContainer/Rows/GUI/GUI"]
margin_right = 837.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "Comandos:  mirar |  ir |  usar |  tomar |  soltar | mochila"
align = 1

[node name="GameInfo" type="PanelContainer" parent="PanelBackground/MarginContainer/Rows"]
margin_top = 48.0
margin_right = 1240.0
margin_bottom = 610.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelBackground/MarginContainer/Rows/GameInfo"]
margin_right = 1240.0
margin_bottom = 562.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="PanelBackground/MarginContainer/Rows/GameInfo/ScrollContainer"]
margin_right = 1240.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputArea" type="PanelContainer" parent="PanelBackground/MarginContainer/Rows"]
margin_top = 630.0
margin_right = 1240.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 4 )

[node name="Columns" type="HBoxContainer" parent="PanelBackground/MarginContainer/Rows/InputArea"]
margin_right = 1240.0
margin_bottom = 50.0

[node name="Caret" type="Label" parent="PanelBackground/MarginContainer/Rows/InputArea/Columns"]
margin_top = 9.0
margin_right = 48.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="PanelBackground/MarginContainer/Rows/InputArea/Columns"]
margin_left = 52.0
margin_right = 1240.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
max_length = 70
placeholder_text = "¿Que vas a hacer?"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="PanelBackground"]
material = SubResource( 8 )
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
texture = SubResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="PanelBackground/MarginContainer/Rows/InputArea/Columns/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="PanelBackground/MarginContainer/Rows/InputArea/Columns/Input" to="PanelBackground/MarginContainer/Rows/InputArea/Columns/Input" method="_on_Input_text_entered"]
